# quality-gate-tool

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  README.md  commit_msg.txt  docker-compose.yml  fix_lint_msg.txt  preview.html  quality-gate.code-workspace
.github/: instructions.md
backend/: Dockerfile  conftest.py  projects.json  pyproject.toml  pytest.ini  stress_test.py
backend/app/: main.py
backend/app/modules/analysis/application/: services.py
backend/app/modules/analysis/application/engine/: __init__.py  base_module.py  modules.py  orchestrator.py
backend/app/modules/analysis/domain/: ports.py
backend/app/modules/analysis/infrastructure/: log_parser.py
backend/app/modules/analysis/infrastructure/adapters/: file_watcher.py  scoped_notifier.py  websocket_notifier.py
backend/app/modules/analysis/infrastructure/web/: router.py
backend/app/modules/filesystem/application/: services.py
backend/app/modules/filesystem/domain/: ports.py
backend/app/modules/filesystem/infrastructure/adapters/: local_adapter.py
backend/app/modules/filesystem/infrastructure/web/: router.py
backend/app/modules/project/application/: services.py
backend/app/modules/project/domain/: entities.py  ports.py
backend/app/modules/project/infrastructure/adapters/: json_repository.py
backend/app/modules/project/infrastructure/web/: router.py
backend/tests/load/: locustfile.py
backend/tests/modules/analysis/e2e/: test_live_watch_full.py  test_state_integrity.py
backend/tests/modules/analysis/integration/: test_analysis_router.py  test_backend_scenarios.py  test_file_watcher.py  test_live_watch.py  test_status_codes.py  test_tool_parity.py  test_websocket_notifier.py
backend/tests/modules/analysis/unit/: test_file_watcher.py  test_file_watcher_unit.py  test_log_parser.py  test_modules.py  test_orchestrator.py  test_orchestrator_execution.py  test_scoped_notifier.py  test_services.py  test_streaming_architecture.py
backend/tests/modules/filesystem/integration/: test_filesystem_router.py  test_security.py
backend/tests/modules/filesystem/unit/: test_adapter.py  test_filesystem_service.py
backend/tests/modules/project/integration/: test_project_router.py
backend/tests/modules/project/unit/: test_project_service.py  test_repository.py  test_service.py
docs/: DEBUGGING.md
frontend/: .eslintrc.js  .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/coverage/: FileSystem3D.tsx.html  LoadingModal.tsx.html  ModuleCard.tsx.html  clover.xml  coverage-final.json  index.html
frontend/e2e/: analysis.spec.ts  background-persistence.spec.ts  filesystem_stress.spec.ts  state_integrity.spec.ts
frontend/src/app/: UnhandledRejectionGuard.tsx  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/app/_providers/: CRTManager.tsx  ConnectionManager.tsx  useMetricsSync.ts
frontend/src/app/metrics/: page.test.tsx  page.tsx
frontend/src/app/tests/: Home.unit.test.tsx
frontend/src/components/: ConnectionManager.tsx  ConsoleOutput.tsx  FileSystem3D.tsx  LoadingModal.tsx  LogModal.tsx  MatrixIntro.tsx  MatrixRain.tsx  ModuleCard.tsx  ToolCard.tsx
frontend/src/components/tests/: FileSystem3D.test.tsx  LogModal.test.tsx  ModuleCard.test.tsx  StyleConsistency.test.tsx
frontend/src/config/: modules.ts
frontend/src/entities/analysis/: index.ts
frontend/src/features/analysis/: constants.ts  index.ts  repository.test.ts  repository.ts  types.ts  useAnalysisViewModel.test.ts  useAnalysisViewModel.ts
frontend/src/features/filesystem/: index.ts  repository.test.ts  repository.ts  useFileSystemViewModel.test.ts  useFileSystemViewModel.ts
frontend/src/features/metrics/: index.ts  logParser.ts  types.ts  utils.ts
frontend/src/features/projects/: index.ts  repository.ts  useProjectViewModel.test.ts  useProjectViewModel.ts
frontend/src/hooks/: useMatrixIntro.ts
frontend/src/pages/dashboard/: DashboardPage.tsx
frontend/src/schemas/: filesystem.ts
frontend/src/shared/: index.ts
frontend/src/shared/data/: index.ts  matrix-messages.ts
frontend/src/shared/lib/: index.ts
frontend/src/shared/model/: index.ts  useUIStore.ts
frontend/src/shared/ui/: ErrorBoundary.tsx  LoadingModal.tsx  LogModal.tsx  MatrixEditor.tsx  Sparkline.tsx  Typewriter.tsx
frontend/src/stores/: useUIStore.ts
frontend/src/styles/: MatrixIntro.backup.scss  matrix.scss  theme.scss
frontend/src/styles/abstracts/: _mixins.scss  _theme-vars.scss  _utilities.scss  _variables.scss
frontend/src/types/: analysis.ts  api.ts  filesystem.ts
frontend/test-results/: .last-run.json
frontend/test-results/analysis-Quality-Gate-Anal-9d235-ashboard-and-start-analysis-chromium/: error-context.md  video.webm
frontend/test-results/background-persistence-Bac-e7029-igating-to-metrics-and-back-chromium/: error-context.md  video.webm
frontend/test-results/filesystem_stress-Filesyst-b00ec-ectories-and-verify-content-chromium/: error-context.md  video.webm
frontend/test-results/state_integrity-State-Inte-18864--Watch-Mode-Cycle-Stability-chromium/: error-context.md  video.webm
frontend/test-results/state_integrity-State-Inte-9adee-ntegrity-on-Startup-Refresh-chromium/: error-context.md  video.webm
(+89 files in other folders)
