[tool.poetry]
name = "quality-gate-backend"
version = "2.0.0"
description = "Quality Gate Web App - FastAPI Backend"
authors = ["Andrea <andrea@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
websockets = "^13.1"
aiosqlite = "^0.20.0"
python-multipart = "^0.0.17"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.1"
watchdog = "^6.0.0"
bandit = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.2"
ruff = "^0.8.0"
pyright = "^1.1.389"
lizard = "^1.17.10"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
pre-commit = "^4.5.0"
locust = "^2.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# RUFF CONFIGURATION (Linting & Formatting)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Enable:
# E: pycodestyle errors
# F: Pyflakes
# I: isort (imports)
# B: flake8-bugbear
select = ["E", "F", "I", "B"]

# Ignore:
# E501: Line too long (handled by formatter)
# B008: Do not perform function call `Depends` in argument defaults (FastAPI dependency injection)
# B904: Within an `except` clause, raise exceptions with `raise ... from err`
ignore = ["E501", "B008", "B904"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# PYRIGHT CONFIGURATION (Type Checking)
# ============================================================================
[tool.pyright]
include = ["app", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
pythonVersion = "3.12"
extraPaths = ["."]

# Enable unused import reporting
reportUnusedImport = true

[[tool.pyright.executionEnvironments]]
root = "tests"
reportMissingImports = "none"
reportMissingTypeStubs = "none"

# ============================================================================
# LIZARD CONFIGURATION (Complexity)
# ============================================================================
# Lizard configuration is typically passed via CLI args, but we document it here:
# Threshold: 15
# Excludes: venv, .venv, env, node_modules, .next

[tool.coverage.run]
omit = ["*/__init__.py"]
