[tool.poetry]
name = "quality-gate-backend"
version = "2.0.0"
description = "Quality Gate Web App - FastAPI Backend"
authors = ["Andrea <andrea@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
websockets = "^13.1"
aiosqlite = "^0.20.0"
python-multipart = "^0.0.17"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.1"
watchdog = "^6.0.0"
bandit = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.2"
ruff = "^0.8.0"
pyright = "^1.1.389"
lizard = "^1.17.10"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
pre-commit = "^4.5.0"
locust = "^2.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# =========================================================================
# pyproject.toml: Unified Python Configuration
# RUFF, PYRIGHT, LIZARD
# =========================================================================

# --- [tool.lizard] ---
# 0. CYCLOMATIC COMPLEXITY (SOLE CHECKER)
# Lizard is the designated tool for Cyclomatic Complexity (CCN).
# We enforce a maximum CCN of 15.
# Note: Lizard does not natively read from pyproject.toml, but this serves as
# the single source of truth for documentation.
# Run with: lizard . -C 15

# --- [tool.ruff] ---
# 1. GENERAL LINTING, FORMATTING & IMPORT SORTING
# Goal: Maximum code cleanliness and adherence to PEP8.
# - Line Length: 120 (Matches ESLint)
# - Import Sorting: Enabled (I) - Sole checker
# - Complexity: Disabled (C901) - Handled by Lizard

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".venv", ".git", "__pycache__", "migrations", "build", "docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (Import Sorting - Sole Checker)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
]
ignore = [
    "C901",   # Disabled: Cyclomatic complexity is handled by Lizard
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.ruff.format]
docstring-code-format = true

# --- [tool.pyright] ---
# 2. STATIC TYPE CHECKING
# Goal: Maximum type safety.
# - Import Sorting: Disabled (Handled by Ruff)

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
reportPrivateUsage = false
reportUnusedImport = true
exclude = [".venv", "venv", "**/__pycache__", "htmlcov", "reports", "data"]
